# sfml_tutorial

./: .gitignore  CMakeLists.txt  vcpkg.json
include/: AssetMain.hpp  Game.hpp  StateMain.hpp  state.hpp
src/: AssetMain.cpp  Game.cpp  StateMain.cpp  main.cpp
